# ChatApp

./: LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 20260611011356_initial_schema.down.sql  20260611011356_initial_schema.up.sql
backend/src/: errors.rs  main.rs  models.rs  routes.rs  tokens.rs  utils.rs
backend/src/models/: messages.rs  rooms.rs  tokens.rs  users.rs
backend/src/routes/: auth.rs  message.rs  room.rs  user.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  message.ts  room.ts  user.ts
frontend/src/types/: messages.ts  rooms.ts  users.ts
