[package]
name = "chat-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

dotenvy = "0.15.7"

tokio = { version = "1.52.3", features = ["full"] }

uuid = { version = "1.23.3", features = ["v7"] }

time = "0.3.49"

sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "derive", "macros", "migrate", "uuid", "time"] }

serde = { version = "1.0", features = ["derive"] }

axum = "0.8.9"
