[package]
name = "chat-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

tokio = { version = "1.52", features = ["full"] }

uuid = { version = "1.23", features = ["v7"] }

time = "0.3"

sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "derive", "macros", "migrate", "uuid", "time"] }

serde = { version = "1.0", features = ["derive"] }
serde_with = "3.21"
serde_json = "1.0"

validator = { version = "0.20", features = ["derive"] }

axum = "0.8"

thiserror = "2.0"
