[package]
name = "chat-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

dotenvy = "^0.15"

tokio = { version = "^1.52", features = ["full"] }

uuid = { version = "^1.23", features = ["v7", "serde"] }

time = { version = "^0.3", features = ["macros", "serde", "formatting"] }

sqlx = { version = "^0.9", features = ["runtime-tokio", "postgres", "derive", "macros", "migrate", "uuid", "time"] }

serde = { version = "^1.0", features = ["derive"] }
serde_with = "^3.21"
serde_json = "^1.0"

validator = { version = "^0.20", features = ["derive"] }

axum = "^0.8"
axum-extra = { version = "^0.10", features = ["typed-header", "cookie"] }

thiserror = "^2.0"

argon2 = { version = "^0.5", features = ["std"] }

jsonwebtoken = { version = "^10.4", features = ["rust_crypto"] }

hex = "^0.4"

rand = "^0.10"
